# Grift

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Plans.md  README.md  docker-compose.yml  eslint.config.mjs  mise.toml  next.config.ts  package-lock.json  package.json  requirements-definition.md  tsconfig.json  vitest.config.mts  vitest.config.ts
services/intelligence-worker/: README.md  pyproject.toml
services/intelligence-worker/scripts/: replay-dlq.sh
services/intelligence-worker/tests/: conftest.py  test_blob_reader.py  test_chunking.py  test_completeness_integration.py  test_completeness_tracker.py  test_config.py  test_db.py  test_dead_letter_events.py  test_dead_letter_integration.py  test_embedding.py  test_estimate_orchestrator.py  test_estimate_repository.py  test_extractors.py  test_intent_classifier.py  test_intent_integration.py  test_main.py  test_market_orchestrator.py  test_market_providers.py  test_market_runtime.py  test_market_subscriber.py  test_missing_info.py  test_observation_events.py  test_qa_extraction.py  test_quality_scoring.py  test_requirement_artifacts.py  test_source_document_extractors.py  test_source_document_pipeline.py  test_source_document_repository.py  test_source_document_subscriber.py  test_subscriber.py
services/llm-gateway/: README.md  pyproject.toml
services/llm-gateway/src/llm_gateway/: __init__.py  (+2 more)
services/llm-gateway/tests/: conftest.py  test_audit.py  test_chat.py  test_chat_streaming.py  test_classification.py  test_classification_integration.py  test_fallback_async.py  test_providers.py  test_redaction.py
(+574 files in other folders)
