[project]
name = "benevolent-director-intelligence-worker"
version = "0.0.0"
description = "v2 intelligence worker scaffold"
requires-python = ">=3.12"
dependencies = [
  "google-cloud-pubsub>=2.30.0",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.10",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4.0",
  "mypy>=1.10",
]

[project.scripts]
intelligence-worker = "intelligence_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelligence_worker"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
